--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@enfo/rename-me",
+  "name": "@enfo/aws-lambda",
   "version": "0.0.1",
   "description": "A fleshed out typescript NPM package template",
   "main": "index.js",
@@ -15,12 +15,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/enfogroup/rename-me.git"
+    "url": "https://github.com/enfogroup/aws-lambda.git"
   },
   "keywords": [],
   "author": "Urban Pettersson",
   "license": "MIT",
-  "homepage": "https://github.com/enfogroup/rename-me#readme",
+  "homepage": "https://github.com/enfogroup/aws-lambda#readme",
   "devDependencies": {
     "@commitlint/cli": "^13.2.0",
     "@commitlint/config-conventional": "^13.2.0",
